Username not correctly displayed when too long. Edit profile link is not always aligned.

--- a/www/front_src/src/styles/partials/_header.scss
+++ b/www/front_src/src/styles/partials/_header.scss
@@ -254,6 +254,7 @@
     &.profile {
       .submenu-user-type {
         display: inline-block;
+        width: 54%;
       }
       .submenu-user-edit {
         font-family: $primary-font-light;
@@ -319,6 +320,7 @@
       .submenu-user-name {
         display: block;
         margin-bottom: 10px;
+        word-break: break-word;
       }
       .button-wrap {
         .btn {
